# recsys-ecommerce

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.api  MODEL_CARD.md  README.md  docker-compose.yml  dvc.yaml  metrics.json  params.yaml  pyproject.toml
.dvc/: config
data/: raw.dvc
docs/: roteiro-tech-challenge.md
scripts/: explore_retailrocket.py  promote_model.py  validate_env.py
src/recsys/: __init__.py  config.py  seeding.py
src/recsys/api/: __init__.py  app.py
src/recsys/data/: preprocessors.py
src/recsys/evaluation/: metrics.py
src/recsys/features/: splitting.py
src/recsys/models/: __init__.py  base.py  factory.py  item_knn.py  ncf.py  popularity.py  svd.py
src/recsys/pipelines/: __init__.py  evaluate.py  feature_eng.py  params.py  preprocess.py  train.py
src/recsys/training/: __init__.py  registry.py  tracking.py
tests/: test_api.py  test_baselines.py  test_config.py  test_factory.py  test_metrics.py  test_ncf.py  test_popularity.py  test_preprocessors.py  test_registry.py  test_splitting.py
