[project]
name = "recsys-ecommerce"
version = "0.1.0"
description = "E-commerce product recommendation system based on user browsing behavior (FIAP Tech Challenge Phase 2)"
authors = [{ name = "Rafael Neder Maiorino", email = "rafaneder@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.2",
    "scikit-learn>=1.4",
    "mlflow>=2.14",
    "dvc[azure]>=3.50",
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "pyarrow>=15.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recsys"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C90",  # mccabe complexity (keeps functions small)
    "SIM",  # flake8-simplify
    "D",    # pydocstyle (Google convention)
]
ignore = [
    "D100",  # missing docstring in public module (module docstrings optional)
    "D104",  # missing docstring in public package
]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D101", "D102", "D103", "D107"]  # docstrings optional in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.coverage.run]
source = ["src/recsys"]
